[tool.poetry]
name = "cyclic-toposort"
version = "1.1.0"
description = "A sorting algorithm for directed cyclic graphs that results in a sorting with minimal cyclic edges."
authors = ["Paul Pauls <mail@paulpauls.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cyclic_toposort"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39", "py310", "py311", "py312"]
line-length = 120

[tool.docformatter]
wrap-summaries = 120
wrap-descriptions = 120

[tool.ruff]
select = ["ALL"]
target-version = "py39"
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true
python_version = "3.7"
